<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_bg"  >
   
    <include layout="@layout/setting_header_layout"/>
    
    <!-- 声道    单声道/双声道 -->
    <LinearLayout 
        android:id="@+id/layout_channel_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"  >
                
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_type"
            android:textColor="@color/white"
            android:textSize="8pt"/>
        <RadioGroup
	        android:layout_marginTop="12dp"
            android:id="@+id/channel_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >
            <RadioButton
                android:id="@+id/channel_mono"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_mono"
                android:textColor="@color/white"
                android:textSize="8pt"
                />
            <RadioButton
                android:id="@+id/channel_stereo"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_stereo"
                android:textColor="@color/white"
                android:textSize="8pt"
                android:checked="true"
                />        
        </RadioGroup>
    </LinearLayout>
    
    <!-- g 722.1 setting -->    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="12dp"  >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_722_1_setting"
            android:textColor="@color/white"
            android:textSize="8pt"/>
        
        <!-- 带宽 band_width -->
        <RelativeLayout
	        android:id="@+id/band_width_layout"
            android:layout_marginTop="12dp"
	        android:layout_width="fill_parent"
	        android:layout_height="60dp"
	        android:background="@drawable/listview_bg"
	        android:gravity="bottom" >
	
	        <TextView
	            android:id="@+id/band_width"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:layout_gravity="center"
	            android:layout_marginLeft="12dp"
	            android:layout_marginRight="12dp"
	            android:text="@string/band_width"
	            android:textColor="@color/white"
	            android:textSize="8pt" />
	
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:layout_toRightOf="@id/band_width"
	            android:contentDescription="@string/app_name"
	            android:scaleType="fitXY"
	            android:src="@drawable/line_bg" />
	
	        <Button
	            android:id="@+id/band_width_static_btn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:layout_gravity="center"
	            android:layout_marginLeft="12dp"
	            android:layout_marginRight="12dp"
	            android:background="@drawable/pull" />
	
	        <Spinner
	            android:id="@+id/band_width_value"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_toLeftOf="@id/band_width_static_btn"
                android:layout_toRightOf="@id/band_width"
                android:spinnerMode="dropdown"
                android:background="#00ffffff" />
	        <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:layout_toRightOf="@id/band_width_value"
	            android:contentDescription="@string/app_name"
	            android:scaleType="fitXY"
	            android:src="@drawable/line_bg" />
	    </RelativeLayout>
	    
        <!-- 码率 bit_rate -->
        <RelativeLayout
            android:id="@+id/bit_rate_layout"
            android:layout_marginTop="12dp"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/listview_bg"
            android:gravity="bottom" >
    
            <TextView
                android:id="@+id/bit_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/bit_rate"
                android:textColor="@color/white"
                android:textSize="8pt" />
    
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/bit_rate"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/line_bg" />
    
            <Button
                android:id="@+id/bit_rate_static_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/pull" />
    
            <Spinner
                android:id="@+id/bit_rate_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/bit_rate_static_btn"
                android:layout_toRightOf="@id/bit_rate"
                android:spinnerMode="dropdown"
                android:background="#00ffffff" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/bit_rate_value"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/line_bg" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
