<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">

    <RelativeLayout
        android:id="@+id/voice_info_layout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/listview_bg"
        android:gravity="bottom" >

        <TextView
            android:id="@+id/voice_index_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/voice_index"
            android:textColor="@color/white"
            android:textSize="10pt" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/voice_index_btn"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/line_bg" />

        <Button
            android:id="@+id/music_static_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/download_btn" />

        <ImageView
            android:id="@+id/music_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@id/voice_index_btn"
            android:background="@drawable/music_btn"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/music_name_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/music_static_btn"
            android:layout_toRightOf="@id/music_btn"
            android:text="@string/devices_name"
            android:textColor="@color/white"
            android:textSize="8pt" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/music_name_txt"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/line_bg" />
    </RelativeLayout>

    <ProgressBar
		android:id="@+id/download_progress_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/voice_info_layout"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="-4dp"
        android:gravity="center"
		android:max="100"
		android:progressDrawable="@drawable/download_bar"
		style="@android:style/Widget.ProgressBar.Horizontal"
	/>
    <TextView
		android:id="@+id/receive_status_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/voice_info_layout"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="-4dp"
        android:gravity="center"
	/>


</RelativeLayout>